--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.4.0",
     "@lottiefiles/react-lottie-player": "^3.5.3",
-    "@prisma/client": "^5.10.2",
     "@types/next-auth": "^3.15.0",
     "lodash": "^4.17.21",
     "next": "14.1.0",
@@ -23,6 +22,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@prisma/client": "^5.12.0",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -30,8 +30,10 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "i": "^0.3.7",
+    "npm": "^10.5.1",
     "postcss": "^8",
-    "prisma": "^5.10.2",
+    "prisma": "^5.12.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
